# study

./: .gitignore  .gitmodules  UDP压测架构.drawio  aes  aes.cc  base64  base64.cc  captcp  captcp.cc  class_name.cc  code_convert.cc  convert.cxx  define_repate.cpp  epoll  epoll.cc  epoll_ssl.cc  getaddrinfo.cc  getopt  getopt.cc  getsockname.cc  glibc_memmem.cc  icmp  icmp.cpp  jsoncpp_test.cc  local_client.cpp  local_server.cpp  lock_free_queue.h  md5  md5.cc  mutex  mutex.cc  native_aio.cc  operator_new_delete.cc  ping  ping.c  poll.cc  pretty_function.cc  range_for_loop.cc  reactor.c  readme  (+44 more)
android_cpp/: build.sh  get_dev.cc  udp_send  udp_send.cc
asm/: Makefile  core  coroutine.cc  coroutine.s  rdtsc  rdtsc.c  rdtsc.cc
atomic/: lock_free.h  test_acquire_release.cc
av_learning/: README  avdevice_list_video.cc  capture_image.cc  capture_video.cc
boringssl/: CMakeLists.txt  README  client.cpp  server.cpp  server.crt  server_pkcs8.key
boringssl/common/: boringssl_glue.cpp  boringssl_glue.h  quic_bp_builder.h  quic_crypto.cpp  quic_crypto.h  udp_socket.cpp  udp_socket.h
boringssl/x25519/: x25519_usage.cpp  x25519_wrapper.hpp
broadcast/: README  listener.c  multicast.cc  sender.c
c++/c++_11/: lambda.cpp  regex.cc  test_auto.cc  test_shared_ptr.cc  test_thread_local.cc  自动推导.cpp
c++/c++_17/: Makefile  test_lambda  test_lambda.cc  结构化绑定.cc
c++/c++_20_coroutine/: c++_20_coroutine.cc  c++_20_coroutine_unwind.cc
callstack/: callstack.cpp  callstack.h  cxxabi_stacktrace.hpp  test_callstack.cc  test_cxxabi_stacktrace.cc
check_file_event/: linux_sample.c  poco_watch_file.cc  watch_file.cc
check_file_event/dir/: something.txt  sss.txt
check_file_event/dir/cmake/: CMakeLists.txt
cmake/: CMakeLists.txt
cmake/cmake/: FindJsonCpp.cmake
cmake_project/: CMakeLists.txt
compression_algorithm_testing/: common.hpp  gzip.hpp  lz4.hpp  main.cc  readme  zstd.hpp
design_pattern/: LICENSE  Makefile  decorator_mode.cc  factory_mode.cc  observer_mode.cc  strategy_mode.cc
dlopen/: class.cc  class.h  libmyclass.dump  libmyclass_virtual.dump  test_bfd.cc  test_class  test_class.cc
false_sharing/: false_sharing  false_sharing.cc
fec/: test_raptorq.cc
file_mutex/: file_mutex.cc
golang/: 1_build_in_function.go  2_string.go  3_function_pointer.go  4_struct  4_struct.go  5_global_var.go  6_serialize  6_serialize.go  go.mod  go.sum
gzip/: CMakeLists.txt  test_gzip.cc
hash/: hash.cpp  hash.h  test_hash  test_hash.cpp
http-parser/: Makefile  README.md  parsertrace  parsertrace.c
hv/: Makefile  libhv_kcp.cc  test_kcp  test_kcp.cc  test_udp_client  test_udp_client.c  test_udp_server  test_udp_server.c
icmp/: test_icmp.cc
inotify/: fswatch.cc  inotify.man  readme
inotify/dir/cmake/: CMakeLists.txt
jemalloc/: test_jemalloc.cc  test_jemalloc_hook.cc  test_jemalloc_perload.cc
json/: test_json.cpp
json/nlohmann/: json.hpp
jsoncpp/: JsonWriter.cpp  jsonreader.cpp  jsonreader.h  jsonwriter.h  read_jsoncpp.cc
kcp/: Makefile  ikcp.c  ikcp.h  kcp_client.cc  kcp_main.cc  kcp_server.cc
libaco/: Makefile  aco.c  benchmark.cc  coroutine.cpp  coroutine.h  create_co_in_co.cc  test_co.cc  test_libaco.cc
libcuckoo/: count_freq.cc
libfiber/: Makefile  fiber_server  fiber_server.cc
libfiber/util/: util.c  util.h
libiconv/: test_iconv.cc
libstatgrab/: cpu_press.cc  cpu_usage.cc  helpers.c  helpers.h
libstatgrab/libstatgrab-0.92.1/: .gitignore
libstatgrab/libstatgrab-0.92.1/docs/: Makefile.am
libzip/: read_zip.cc  write_zip.cc
lsquic/: README.md  client.cc  prog.c  prog.h  server.cc  server_copy.cc  test_config.h
miniupnp/: README  delete_all_udp_mapping.cc  test_miniupnp_add  test_miniupnp_add.cc  test_miniupnp_list.cc  test_miniupnp_remove.cc  test_upnp_expire_time.cc  upnpdev.xml
mmap/: core  file.txt  mmap  mmap.cc  mmap_test  mmap_test.c  test.txt  test_mmap  test_mmap.cc
msgpack/: test_msgpack.cc
mysql/: insert_image_to_mysql.cc  read_binary_from_mysql.cc
native_aio/: async_io.cpp  async_io.h  native_aio  native_aio.cc  native_aio_read.cc  native_aio_write.cc  普通IO和nio测试.md
posix_api/: fstat.cc
protobuf/: Makefile  log  log.proto  msg.pb.cc  msg.pb.h  msg.proto  protocol.pb.cc  protocol.pb.h  protocol.proto  read_log.cc  read_protobuf  read_protobuf.cc  read_protocol  read_protocol.cc  readme  write_log.cc  write_protobuf  write_protobuf.cc  write_protocol  write_protocol.cc
raptorq/: Makefile  raptorq_bench.cc  test_c.c  test_cpp.cpp  test_raptorq.cc
rbtree/: rbtree.h  test_rbtree.c
redis/: test_redis_hash  test_redis_hash.cc
reuseport/: udp_client.cc  udp_server.cc
rttr/: test_rttr.cc
sendmmsg/: udp_client.cc  udp_server.cc
shm/: shm_read.cc  shm_write.cc
signal/: test_pthread_kill.cc
splice/: splice.cc
sqlutils/: Makefile  insert  insert_image.cc  query_userinfo.sql
ssl/: epoll_ssl.cc  libevent_ssl.cc  request.csr  server.key  server.pem
std_error_code/: use_error_code.cc
tcp/: common.h  noblock_connect.cc  tcp_punch_hole.cc  tcp_server.cc  tcp_server.cc.bak  tcp_simultaneous_open.cc
template/: clazz.h  std_enable_if.cc  std_is_enum.cc  std_is_fundamental.cc  template
ucontext/: bench.cc  fiber.cpp  fiber.h  libtask-20121021.tgz  main.cc  symmetric_coroutine.cc  ucontext.cpp
udp/: Makefile  README  mtu_client.c  mtu_probe_client.c  mtu_probe_common.c  mtu_probe_common.h  mtu_probe_server.c  mtu_server.c  plmtud.c  protocol.md  quic处理mtu黑洞的机制分析.md  udp_client.cc  udp_echo_client.cc  udp_echo_server.cc  udp_server.cc  udp_test_recvmmsg.cc
uring/: example.txt  uring_echo_server.cc  uring_read_write_file  uring_read_write_file.cc  uring_register_buffer.cc  uring_register_file.cc
utp/: target.cap  utp_client  utp_client.cc  utp_server  utp_server.cc
v4l2/: demo.c  open_video1.cc  v4l2.cc  v4l2_async_capture_video.cc  v4l2_capture.cc  v4l2_capture_video.cc  v4l2_yuv.cc
xml/: for_xml_w.xml  utf8_test  utf8_test.cpp  xml_w  xml_w.cpp  xmltest  xmltest.cpp
yaml/: Makefile  clash.yaml  config.yaml  config.yml  makefile  parse_clash.cc  read_clash_yaml.cc  readyaml.cc  testyaml.cc
(+1 files in other folders)
